# Show_tempareture_from_BLE_ADV_ATC_MiThermometer

./: .gitignore  BLE_ADV_ATC_MiThermometer.py  LICENSE  README.md  dot_env  pyproject.toml  requirements.txt  setup.py  versionfile.txt
MiTermometerPVVX/: __init__.py  abstract.py  blescanner.py  discord_api.py  env_settings.py  main.py  notifications.py  outputs.py  parse_args.py  utils.py
script/: build-version.py  build.cmd  build.sh  build_version.py  gen_req_txt.cmd  gen_req_txt.sh  versionfile.txt
