[tool.poetry]
name = "show-temperature-from-ble-adv-atc-mithermometer"
version = "0.1.0"
description = "Show temperature and humidity from BLE ADV 'ATC MiThermometer'"
authors = ["lexxai <lexxai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
bleak = "^0.22.3"
plyer = "^2.1.0"
pyobjus = "^1.2.3"
python-dotenv = "^1.0.1"
httpx = {extras = ["http2"], version = "^0.28.1"}


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
