[tool.poetry]
name = "show-temperature-from-ble-adv-atc-mithermometer"
version = "0.2.2"
description = "Show metrics from BLE devices and notifications"
authors = ["lexxai <lexxai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
bleak = "^0.22.3"
python-dotenv = "^1.0.1"
httpx = {extras = ["http2"], version = "^0.28.1"}
plyer = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
pyinstaller-versionfile = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
